--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                         </p>
                         <p>
                             My name written as <span lang="ch">谭芷茵</span> in Chinese, pronounced /tæn/ /dʒiː/ /jɪːn/ in Mandarin, 
-                            /tam/ /dzi:/ /jɐn/ in Cantonese.
+                            /tam/ /dziː/ /jɐn/ in Cantonese.
                         </p>
                         <p>
                             <a href="https://www.visualcv.com/zhiyin_cv/" style="text-decoration: underline;">CV (PDF)</a>
