--- a/fairyland/gallery.html
+++ b/fairyland/gallery.html
@@ -59,7 +59,7 @@
             justify-content: center;
             align-items: center;
             position:relative;
-            background: linear-gradient(328deg, rgb(68 26 2 / 96%), rgb(223 165 136 / 61%));
+            background: linear-gradient(328deg, rgb(77 28 1 / 96%), rgb(223 165 136 / 61%));
             box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
             border-radius: 2%;
             border-bottom: #402819;
@@ -109,7 +109,7 @@
         .painting_intro p {
             text-align: center;
             color:rgb(201, 188, 171);
-            font:italic 1.8vh "Fira Sans", sans-serif;
+            font:italic 1.8vh "Fira Sans", serif;
             font-size: 1.8vh;
             font-weight: bold;
             line-height: 2.4vh;
@@ -149,6 +149,10 @@
             cursor: pointer;
         }
 
+        #painting-a-girl-pic:hover {
+            cursor: pointer;
+        }
+
         .close_icon:hover,
         .close_icon:focus {
             color: rgba(192, 166, 152, 0.8);
@@ -183,31 +187,45 @@
     <div id="seventh-floor">
         <!--small painting-->
         <div id="paint-two-cats">
-            <div id="painting-two-cats-pic" style="position:absolute; background: url('../pic/two_cats.jpeg') no-repeat;
+            <div id="painting-two-cats-pic" style="position:absolute; background: url('../pic/painting_two_cats.jpeg') no-repeat;
                                                     background-size: 100%; top: 60.85%; left: 36.3%; width:3.2%; height:6%;">
                 <div id="painting-two-cats-pic-mask" style="position: absolute; background: rgba(136, 57, 0, 0.3);
                                                             top: 0; left: 0; width: 100%; height: 100%;"></div>
             </div>
         </div>
 
+        <div id="paint-a-girl">
+            <div id="painting-a-girl-pic" style="position:absolute; background: url('../pic/painting_a_girl.jpeg') no-repeat;
+                                                    background-size: 100%; top: 44.15%; left: 30.05%; width:2.82%; height:4.3%;">
+                <div id="painting-a-girl-pic-mask" style="position: absolute; background: rgba(136, 57, 0, 0.3);
+                                                            top: 0; left: 0; width: 100%; height: 100%;"></div>
+            </div>
+        </div>
+
         <!--enlarged painting-->
-        <div class="enlarged_painting" id="enlarged-painting-two-cats" style="top: 18%; left: 24%; width: 23%; height: 50%;">
-            <div class="enlarged_painting_pic" id="enlarged-painting-two-cats-pic" style="grid-template-rows: 75% 1fr;">
+        <div class="enlarged_painting" id="enlarged-painting-two-cats" 
+                                        style="top: 12%; left: 24%; width: 23%; height: 50%;">
+            <div class="enlarged_painting_pic" id="enlarged-painting-two-cats-pic" 
+                                                style="grid-template-rows: 75% 1fr;">
                 <div class="painting_pic">
-                    <img src="../pic/two_cats.jpeg" style="width:100%; height: 100%;">
+                    <img src="../pic/painting_two_cats.jpeg" style="width:100%; height: 100%;">
                 </div>
                 <div class="painting_intro">
                     <h6>The Midnight Gaze</h6>
                     <p>Author: Zhiyin Tan
                         <br>Date: 03 Jun 2023
                     </p>
-                    <p style="text-align: left;">Introduction: <br>Awakening one midnight, I was greeted by the enchanting sight of two cats, 
-                        Qing Bu Liang, a delightful blend of Neva Masquerade Siberian and Ragdoll, 
-                        and his charming elder brother, Bai Tang Gao. 
-                        <br><br>Their curious gazes, 
-                        alternating between me and the insects drawn to the light, 
-                        brought unexpected warmth and companionship to the midnight hour. 
-                        <br><br>This serene, nocturnal tableau brings a comforting ease that lingers even as dawn breaks.
+                    <p style="text-align: left;">Introduction: <br>In the quiet hush of midnight, 
+                        the artist is entranced by the sight of two cats: 
+                        Qing, an endearing mix of Neva Masquerade Siberian and Ragdoll, 
+                        and Gao, his captivating elder brother of British Shorthair breed. 
+                        <br><br>
+                        Their alternating gazes, curious yet affectionate, 
+                        switch between the artist and the insects attracted to the ambient light, 
+                        infusing the night with a sense of unexpected companionship. 
+                        <br><br>
+                        This serene nocturnal scene cultivates a soothing tranquility that endures, 
+                        lingering even as dawn ushers in a new day.
                     </p>
                 </div>
             </div>
@@ -217,19 +235,71 @@
             </div>
         </div>
 
-        <script>
-            var smallFrame = document.getElementById("painting-two-cats-pic");
-            var frame = document.getElementById("enlarged-painting-two-cats");
-            var span = document.getElementById("close-enlarged-painting-two-cats-pic");
+        <div class="enlarged_painting" id="enlarged-painting-a-girl" 
+                                        style="top: 12%; left: 18%; width: 23%; height: 50%;">
+            <div class="enlarged_painting_pic" id="enlarged-painting-a-girl-pic" 
+                                                style="grid-template-rows: 75% 1fr;">
+                <div class="painting_pic">
+                    <img src="../pic/painting_a_girl.jpeg" style="width:100%; height: 100%;">
+                </div>
+                <div class="painting_intro">
+                    <h6>Genesis of Neues Dawn</h6>
+                    <p>Author: Zhiyin Tan
+                        <br>Date: 10 Mar 2020
+                    </p>
+                    <p style="text-align: left;">Introduction: <br>This painting captures a poignant moment of introspection and transition. 
+                        A figure seated on a carpet under dim light casts a glance over her shoulder, 
+                        her eyes reflecting a determined resignation to a world she is ready to leave behind. 
+                        <br><br>
+                        While the face does not mirror the artist, the gaze resonates with an intimate familiarity, 
+                        a reflection of the artist's own spirit. 
+                        <br><br>
+                        This self-portrait, stripped of explicit narrative yet saturated with silent whispers of emotional discourse, 
+                        uses the subtle play of light and shadow to craft a story more powerful than words.
+                    </p>
+                </div>
+            </div>
+            
+            <div class="close_icon_border" id="close-enlarged-painting-a-girl-pic">
+                <span class="close_icon">&times;</span>
+            </div>
+        </div>
 
-            // When the user clicks on the div, open the frame
-            smallFrame.onclick = function() {
-                frame.style.display = "block";
+        <script>
+            var smallFrameTwoCats = document.getElementById("painting-two-cats-pic");
+            var frameTwoCats = document.getElementById("enlarged-painting-two-cats");
+            var spanTwoCats = document.getElementById("close-enlarged-painting-two-cats-pic");
+
+            smallFrameTwoCats.onclick = function() {
+                frameTwoCats.style.display = "block";
             }
 
-            // When the user clicks on <span> (x), close the frame
-            span.onclick = function() {
-                frame.style.display = "none";
+            spanTwoCats.onclick = function() {
+                frameTwoCats.style.display = "none";
+            }
+
+            window.onclick = function(event) {
+                if (event.target == frameTwoCats) {
+                    frameTwoCats.style.display = "none";
+                }
+            }
+
+            var smallFrameAGirl = document.getElementById("painting-a-girl-pic");
+            var frameAGirl = document.getElementById("enlarged-painting-a-girl");
+            var spanAGirl = document.getElementById("close-enlarged-painting-a-girl-pic");
+
+            smallFrameAGirl.onclick = function() {
+                frameAGirl.style.display = "block";
+            }
+
+            spanAGirl.onclick = function() {
+                frameAGirl.style.display = "none";
+            }
+
+            window.onclick = function(event) {
+                if (event.target == frameAGirl) {
+                    frameAGirl.style.display = "none";
+                }
             }
         </script>
 
