revised covered p property

--- a/fairyland/gallery.html
+++ b/fairyland/gallery.html
@@ -163,7 +163,8 @@
             object-fit: contain; /* You can also use 'cover' if you want the image to fully cover the div */
         }
 
-        .enlarged_writing > .enlarged_writing_pic > h5, p {
+        .enlarged_writing > .enlarged_writing_pic > h5, 
+        .enlarged_writing > .enlarged_writing_pic > p {
             position: absolute;
             font:italic 2.6vh "Fira Sans", serif;
             transform: translate(-50%, -40%);
