add language box for human language page

--- a/knowledgebase.html
+++ b/knowledgebase.html
@@ -27,12 +27,12 @@
 
             <div id="start" class="site-kg-content"> 
                         
-                <h1 class="site-title"> Knowledge Base </h1>
+                <h1 class="site-title" style="color: #65587d;"> Knowledge Base </h1>
                 <div class="knowledge-card">
                     <div class="card">
                         <a class="card-title" href="knowledgebase/computational_linguistics.html">
                             <div class="card-cover-image">
-                                <img class="cover-image" src="./pic/Rooms_by_the_sea.png">
+                                <img class="cover-image" src="./pic/Computational_Linguistics.png">
                             </div>
                             <div class="card-cover-title">
                                 <h4> Computational Linguistics </h4>
@@ -43,7 +43,7 @@
                     <div class="card">
                         <a class="card-title" href="knowledgebase/human_language.html">
                             <div class="card-cover-image">
-                                <img class="cover-image" src="./pic/purple_sea.png">
+                                <img class="cover-image" src="./pic/human_language.png">
                             </div>
                             <div class="card-cover-title">
                                 <h4> Human Language </h4>
@@ -54,7 +54,7 @@
                     <div class="card">
                         <a class="card-title" href="knowledgebase/knowledge_graph.html">
                             <div class="card-cover-image">
-                                <img class="cover-image" src="./pic/flower.png">
+                                <img class="cover-image" src="./pic/Knowledge_base.png">
                             </div>
                             <div class="card-cover-title">
                                 <h4> Knowledge Graph </h4>
@@ -62,6 +62,7 @@
                             </div>
                         </a>
                     </div> 
+                    <!--
                     <div class="card">
                         <a class="card-title" href="knowledgebase/fishing.html">
                             <div class="card-cover-image">
@@ -72,7 +73,7 @@
                                 <h5> Days with Dad </h5>
                             </div>
                         </a>
-                    </div> 
+                    </div> -->
                 </div>
             </div>
             <div style="display:block; z-index: 1000; position: fixed;
