--- a/fairyland/gallery.html
+++ b/fairyland/gallery.html
@@ -60,7 +60,7 @@
         }
 
         #writing-letter-pic {
-            transform: rotateX(310deg) rotateY(299deg) rotateZ(305deg);
+            transform: rotateX(310deg) rotateY(292deg) rotateZ(306deg);
             transition: transform 1s; /* Change happens over 2 seconds */
         }
 
@@ -168,7 +168,7 @@
             position: absolute;
             font:italic 2.6vh "Fira Sans", serif;
             transform: translate(-50%, -40%);
-            color: #68321b;
+            color: #4a1b07d1;
             font-size: 2.6vh;
             line-height: 3.2vh;
             text-align: center;
@@ -274,7 +274,7 @@
             <div id="writing-letter-pic" style="position:absolute; background: url('../pic/letterhead.png') no-repeat;
                                                     background-size: 100%; top: 60%; left: 3%; width:8%; height:8%; perspective: 1000px;
                                                     font-size: 3vh; font:italic 3vh 'Fira Sans', serif; line-height: 8vh;
-                                                    text-align: center; box-shadow: #402819;">
+                                                    text-align: center; box-shadow: -40px 11px 20px rgb(48 21 9);">
                                                     Guides
                 <div id="writing-letter-pic-mask" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;
                                                         background:linear-gradient(12deg, rgb(98 38 0 / 89%), rgb(145 128 120 / 33%));"></div>
