check houman language card

--- a/knowledgebase/human_language.html
+++ b/knowledgebase/human_language.html
@@ -32,50 +32,41 @@
                             <div class="card-left-column">
                                 <div class="box" id="left-top-box">
                                     <img src="image.jpg" alt="Description">
-                                    <p>粤</p>
+                                    <p style="font-size: 20vh;">粤</p>
                                 </div>
                                 <div class="box" id="left-bottom-box">
-                                    <img src="image.jpg" alt="Description">
-                                    <p>Text 2</p>
+                                    <p>Intro</p>
                                 </div>
                             </div>
 
                             <div class="card-right-column">
                                 <div class="card-right-top">
                                     <div class="box" id="right-top-box">
-                                        <img src="image.jpg" alt="Description">
-                                        <p>Text 3</p>
+                                        <p>Vowels</p>
                                     </div>
                                     <div class="box" id="right-top-box">
-                                        <img src="image.jpg" alt="Description">
-                                        <p>Text 4</p>
+                                        <p>Consonants</p>
                                     </div>
                                     <div class="box" id="right-top-box">
-                                        <img src="image.jpg" alt="Description">
-                                        <p>Text 5</p>
+                                        <p>Tones</p>
                                     </div>
                                     <div class="box" id="right-top-box">
-                                        <img src="image.jpg" alt="Description">
-                                        <p>Text 6</p>
+                                        <p>E.g.</p>
                                     </div>
                                 </div>
 
                                 <div class="card-right-bottom">
                                     <div class="box" id="right-bottom-box">
-                                        <img src="image.jpg" alt="Description">
-                                        <p>Text 7</p>
+                                        <p>噉</p>
                                     </div>
                                     <div class="box" id="right-bottom-box">
-                                        <img src="image.jpg" alt="Description">
-                                        <p>Text 8</p>
+                                        <p>係</p>
                                     </div>
                                     <div class="box" id="right-bottom-box">
-                                        <img src="image.jpg" alt="Description">
-                                        <p>Text 9</p>
+                                        <p>咩</p>
                                     </div>
                                     <div class="box" id="right-bottom-box">
-                                        <img src="image.jpg" alt="Description">
-                                        <p>Text 10</p>
+                                        <p>嗻</p>
                                     </div>
                                 </div>
                             </div>
@@ -85,46 +76,41 @@
                             <div class="card-left-column">
                                 <div class="box" id="left-top-box">
                                     <img src="image.jpg" alt="Description">
-                                    <p>Text 1</p>
+                                    <p style="font-size: 20vh;">普</p>
                                 </div>
                                 <div class="box" id="left-bottom-box">
-                                    <img src="image.jpg" alt="Description">
-                                    <p>Text 2</p>
+                                    <p>Intro</p>
                                 </div>
                             </div>
 
                             <div class="card-right-column">
                                 <div class="card-right-top">
                                     <div class="box" id="right-top-box">
-                                        <img src="image.jpg" alt="Description">
-                                        <p>Text 3</p>
+                                        <p>Vowels</p>
                                     </div>
                                     <div class="box" id="right-top-box">
-                                        <img src="image.jpg" alt="Description">
-                                        <p>Text 4</p>
+                                        <p>Consonants</p>
                                     </div>
                                     <div class="box" id="right-top-box">
-                                        <img src="image.jpg" alt="Description">
-                                        <p>Text 5</p>
+                                        <p>Tones</p>
+                                    </div>
+                                    <div class="box" id="right-top-box">
+                                        <p>E.g.</p>
                                     </div>
                                 </div>
 
                                 <div class="card-right-bottom">
                                     <div class="box" id="right-bottom-box">
-                                        <img src="image.jpg" alt="Description">
-                                        <p>Text 6</p>
+                                        <p>朝</p>
                                     </div>
                                     <div class="box" id="right-bottom-box">
-                                        <img src="image.jpg" alt="Description">
-                                        <p>Text 7</p>
+                                        <p>行</p>
                                     </div>
                                     <div class="box" id="right-bottom-box">
-                                        <img src="image.jpg" alt="Description">
-                                        <p>Text 8</p>
+                                        <p>长</p>
                                     </div>
                                     <div class="box" id="right-bottom-box">
-                                        <img src="image.jpg" alt="Description">
-                                        <p>Text 9</p>
+                                        <p>处</p>
                                     </div>
                                 </div>
                             </div>
