--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
                 <div id="start" class="site-home-content">
                     <ul style="display: grid; grid-template-columns:repeat(auto-fill, minmax(8em, 1fr)); gap: 1.5em;
                                  padding: 2vw 10em 0 0; margin: 0;">
-                        <li>
-                            <img class="avatar" title="avatar" src="./pic/avatar_square.png" 
+                        <li style="display: grid; justify-items: center; align-items: center;">
+                            <img class="avatar" title="avatar" src="./pic/avatar_round.png" 
                             style="min-width: 5em; max-width: 8em;">
                         </li>
                         <li style="min-width: 250px;">
@@ -44,20 +44,29 @@
                     <div class="intro" style="
                     text-align: left; line-height: 1.5em; max-width: 50em;">  
                         <p> 
-                            Before obtaining the M.Sc. degree in Computational Linguistics supervised by 
+                            With an academic background spanning the fields of Natural Language Processing and Linguistics, 
+                            my journey in academia has been both enriching and diverse. 
+                            <br><br>
+                            I hold an M.Sc. in Computational Linguistics from the University of Stuttgart, Germany, 
+                            where I was mentored by 
                             <a href="https://nlpado.de/~sebastian/">Prof. Sebastian Padó</a>
-                             at the 
-                            <a href="https://www.ims.uni-stuttgart.de/en/">Institute of Natural Language Processing (IMS)</a> 
-                            of the University of Stuttgart, Germany,
-
-                            I graduated with an M.A. in Chinese Linguistics and my thesis was on sociolinguistics, supervised by 
+                            at the 
+                            <a href="https://www.ims.uni-stuttgart.de/en/">Institute of Natural Language Processing (IMS)</a>. 
+                            My master's thesis focused on optimizing fine-grain entity type classification using contrastive learning.
+                            <br>
+                            Previously, I earned an M.A. in Chinese Linguistics under the guidance of 
                             <a href="https://www.semanticscholar.org/author/Daming-Xu/49718650">Prof. Daming Xu</a>
                             at the 
                             <a href="https://fah.um.edu.mo/department-of-chinese-language-and-literature/programmes/">Faculty of Arts and Humanities</a>
-                            of the University of Macau. 
-                            
-                            Prior to that, I received a B.A. in Chinese Language and Literature from 
-                            <a href="https://www.wyu.edu.cn/">Wuyi University</a> in China.
+                            of the University of Macau in Macau China, 
+                            with a thesis focusing on sociolinguistics. 
+                            <br>
+                            My academic pursuit began with a B.A. in Chinese Language and Literature from 
+                            <a href="https://www.wyu.edu.cn/">Wuyi University</a>, 
+                            China. 
+                            <br><br>
+                            Each educational venture has honed my skills and fostered a deep appreciation for 
+                            the complexities and nuances of linguistics and language processing.  
                         </p>
                         <p>
                             My name written as <span lang="ch">谭芷茵</span> in Chinese, pronounced /tæn/ /dʒiː/ /jɪːn/ in Mandarin, 
