added content page template

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <ul style="display: grid; grid-template-columns:repeat(auto-fill, minmax(8em, 1fr)); gap: 1.5em;
                                  padding: 2vw 10em 0 0; margin: 0;">
                         <li style="display: grid; justify-items: center; align-items: center;">
-                            <img class="avatar" title="avatar" src="./pic/avatar_round.png" 
+                            <img class="avatar" title="avatar" src="./pic/avatar_green_round_small.png" 
                             style="min-width: 5em; max-width: 8em;">
                         </li>
                         <li style="min-width: 250px;">
