updated CL page of KB

--- a/knowledgebase/computational_linguistics.html
+++ b/knowledgebase/computational_linguistics.html
@@ -15,6 +15,7 @@
         <link rel="Shortcut Icon" href="../pic/little_fox_round.ico" type="image/x-icon">
 
         <link rel="stylesheet" href="../css/index.css">
+        <script src="../js/csi.js" defer></script>
 
         <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -24,14 +25,18 @@
             .site-cl-content{
                 width: auto;
                 height: auto;
-                padding: 10vw 5vw 5vw 5vw;
+                padding: 5vw 5vw 5vw 5vw;
             }
 
-            .site-title{
+            .site-title {
                 position:relative;
                 background-color: rgb(255, 255, 255);
-                font-size: 1.6em;
+                align-items: center;
+                height:15vh;
+                font-size: 2.5em;
+                font-weight: bold;
                 z-index: 3;
+                margin: 0;
             }
 
             .site-main {
@@ -125,7 +130,7 @@
 
             @media screen and (max-width: 1000px) {
                 .site-title{
-                    font-size: 1.6em;
+                    font-size: 2em;
                     z-index: 3;
                 }
 
@@ -271,21 +276,23 @@
                     <!-- Content Section -->
                     <div id="content">
                         <div id="main-content">
-                            Welcome to the Computational Linguistics 101, a comprehensive online platform dedicated to 
-                            democratizing and sharing knowledge on the multifaceted field of computational linguistics. 
-                            <br><br>
-                            Housed on a personal website, this page covers core aspects of computational linguistics, 
-                            from syntax and semantics to natural language processing and beyond. This curated knowledge hub 
-                            not only provides key insights into foundational concepts but also presents the latest developments 
-                            in the field, subject to the scope and capability of the curator. 
-                            <br><br>
-                            The primary aim is to translate complex terminologies and theories into easy-to-grasp content, 
-                            presented through diverse and engaging methods. 
-                            <br><br>
-                            Your contributions and insights are valued in this collaborative learning journey. 
-                            Feel free to reach out via email or GitHub to suggest improvements, discuss ideas, 
-                            or deepen the conversation. 
-                            Let's together build an inclusive space where computational linguistics is accessible to all.     
+                            <p>
+                                Welcome to the Computational Linguistics 101, a comprehensive online platform dedicated to 
+                                democratizing and sharing knowledge on the multifaceted field of computational linguistics. 
+                                <br><br>
+                                Housed on a personal website, this page covers core aspects of computational linguistics, 
+                                from syntax and semantics to natural language processing and beyond. This curated knowledge hub 
+                                not only provides key insights into foundational concepts but also presents the latest developments 
+                                in the field, subject to the scope and capability of the curator. 
+                                <br><br>
+                                The primary aim is to translate complex terminologies and theories into easy-to-grasp content, 
+                                presented through diverse and engaging methods. 
+                                <br><br>
+                                Your contributions and insights are valued in this collaborative learning journey. 
+                                Feel free to reach out via email or GitHub to suggest improvements, discuss ideas, 
+                                or deepen the conversation. 
+                                Let's together build an inclusive space where computational linguistics is accessible to all.
+                            </p>
                         </div>
                         <div id="content1" class="content-item" style="display: none;">
                             <div id="accordion">
