--- a/tool/navigation.html
+++ b/tool/navigation.html
@@ -32,7 +32,7 @@
 
             <ul class="nav" role="menu" 
                 style="
-                    flex: 2;  white-space: nowrap;
+                    flex: 2;  white-space: nowrap; flex-wrap: nowrap;
                     overflow: hidden; overflow-x: auto;
                     padding: 0; margin: 0.2em 0em 0em 0em;">
 
