--- a/knowledgebase/computational_linguistics.html
+++ b/knowledgebase/computational_linguistics.html
@@ -27,12 +27,16 @@
                 height: inherit;
                 padding: 0;
                 margin: 0;
-                overflow-y: scroll;
+                
             }
 
             .site-cl-main {
+                width: inherit;
+                min-height: 95%;
+                max-height: auto;
                 background-color: rgb(233, 230, 245);
                 padding: 0 20px 40px 20px;
+                overflow-y: scroll;
             }
 
             .site-cl-content{
@@ -58,6 +62,8 @@
                 grid-template-columns: 30% 70%;
                 height:90%;
                 width: inherit;
+                overflow-y: scroll;
+                overflow-x: hidden;
             }
 
             #sidebar {
@@ -349,14 +355,18 @@
                                     <div class="card-header" id="headingOne">
                                         <h5 class="mb-0">
                                             <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                                                Research 1-Method Content
+                                                Key Terms
                                             </button>
                                         </h5>
                                     </div>
                     
                                     <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
                                         <div class="card-body">
-                                            Content for Zone 1
+                                            Constituents: These are groups of words that function as a single unit within a hierarchical structure. Constituents can be a single word ("dogs") or a group of words ("the big red ball"). The concept of a constituent is central to the theory of Constituency Grammar. It is often tested through movement, substitution, and coordination tests.
+                                            <br><br>
+                                            Phrases: A phrase is a type of constituent that contains one or more words. There are different types of phrases in English, such as noun phrases (NP), verb phrases (VP), and adjective phrases (AP), among others. Each phrase has a head, which is the word that determines the type of the phrase. For example, in a noun phrase, the head word is a noun.
+                                            <br><br>
+                                            Nodes: In tree diagrams that represent constituency grammars, nodes are points that connect lines representing relationships between different constituents. Each node represents a constituent. The topmost node, or root, represents the entire sentence.
                                         </div>
                                     </div>
                                 </div>
@@ -364,13 +374,13 @@
                                     <div class="card-header" id="headingTwo">
                                         <h5 class="mb-0">
                                             <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                                                Zone 2
+                                                Tree Diagrams
                                             </button>
                                         </h5>
                                     </div>
                                     <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
                                         <div class="card-body">
-                                            Content for Zone 2
+                                            Tree diagrams are a pivotal tool in Constituency Grammar, illustrating the hierarchical organization of sentences. At the top, or root, of the tree is the entire sentence. This branches out into constituents and sub-constituents, visualizing their nested, hierarchical relationships. For example, in the sentence "John ate the apple", the tree diagram would first divide this into a noun phrase "John" and a verb phrase "ate the apple", further breaking down the verb phrase into the verb "ate" and the noun phrase "the apple". These diagrams clarify the syntactic roles of different sentence components, making Constituency Grammar more accessible.
                                         </div>
                                     </div>
                                 </div>
@@ -378,13 +388,13 @@
                                     <div class="card-header" id="headingThree">
                                         <h5 class="mb-0">
                                             <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                                                Zone 3
+                                                Definition & Origins
                                             </button>
                                         </h5>
                                     </div>
                                     <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
                                         <div class="card-body">
-                                            Content for Zone 3
+                                            Constituency Grammar, also known as Phrase Structure Grammar, is a syntax framework that dissects sentences into constituent parts or 'phrases'. Each phrase, ranging from a single word to a group of words, belongs to a specific grammatical category and plays a distinct role in the sentence. Originating from the mid-20th century linguistic theories of Noam Chomsky, Constituency Grammar lays the groundwork for transformational grammar, pioneering a new way to understand and analyze language structure. Its enduring impact is visible in various applications including modern computational linguistics and natural language processing.
                                         </div>
                                     </div>
                                 </div>
