revised nav bar height

--- a/knowledgebase/computational_linguistics.html
+++ b/knowledgebase/computational_linguistics.html
@@ -27,7 +27,8 @@
                 height: inherit;
                 padding: 0;
                 margin: 0;
-                
+                overflow-x: hidden;
+                overflow-y: hidden;
             }
 
             .site-cl-main {
@@ -36,7 +37,7 @@
                 max-height: auto;
                 background-color: rgb(233, 230, 245);
                 padding: 0 20px 40px 20px;
-                overflow-y: scroll;
+                overflow-y: hidden;
             }
 
             .site-cl-content{
