--- a/tool/navigation.html
+++ b/tool/navigation.html
@@ -12,12 +12,12 @@
 
         <nav id="navbar_Responsive" 
             style="
-                width: inherit; height: 2.5em;
+                width: inherit; height: 50px;
                 background-color: rgb(0, 0, 0);
                 align-items: center;
                 float: left; display: flex; 
                 flex-flow: row wrap; 
-                padding: 0.2em 0em 0.4em 0em; margin: 0;">
+                padding: 5px 0px 10px 0px; margin: 0; gap: 0px">
             
             <div role="menu-item" 
                 style="
