added reference page for cl content

--- a/knowledgebase.html
+++ b/knowledgebase.html
@@ -47,7 +47,7 @@
                             </div>
                             <div class="card-cover-title">
                                 <h4> Human Language </h4>
-                                <h5> Cantonese </h5>
+                                <h5> Cantonese, Mandarin </h5>
                             </div>
                         </a>
                     </div> 
