--- a/fairyland/gallery.html
+++ b/fairyland/gallery.html
@@ -27,6 +27,7 @@
         /* Handle */
         ::-webkit-scrollbar-thumb {
             background: antiquewhite; /* color of the scroll handle */
+            border-radius: 10px;
         }
 
         /* Handle on hover */
