--- a/knowledgebase/human_language.html
+++ b/knowledgebase/human_language.html
@@ -53,9 +53,6 @@
                                     <div class="box" id="ct-right-top-box-3">
                                         <p>Tones</p>
                                     </div>
-                                    <div class="box" id="ct-right-top-box-4">
-                                        <p>E.g.</p>
-                                    </div>
                                 </div>
 
                                 <div class="card-right-bottom">
@@ -86,7 +83,7 @@
                                     <P style="font-size: 1.5vh; font-weight:bold;">CULTURE & LIFESTYLE</P>
                                 </div>
                                 <div class="box" id="left-bottom-box">
-                                    <p>Intro</p>
+                                    <p>Chinese official Language</p>
                                 </div>
                             </div>
 
@@ -100,9 +97,6 @@
                                     </div>
                                     <div class="box" id="md-right-top-box-3">
                                         <p>Tones</p>
-                                    </div>
-                                    <div class="box" id="md-right-top-box-4">
-                                        <p>E.g.</p>
                                     </div>
                                 </div>
 
