finally fixed the toggleActive and content showing logic

--- a/knowledgebase/human_language.html
+++ b/knowledgebase/human_language.html
@@ -34,11 +34,11 @@
                                         style="background: url('../pic/culture_yue_food.png')no-repeat;
                                             background-size: cover;
                                             background-position: center;">
-                                    <p style="font-size: 2.8vh; font-weight:bold;">CANTONESE</p>
+                                    <p style="font-size: 2.3vh; font-weight:bold;">CANTONESE</p>
                                     <P style="font-size: 1.4vh; font-weight:bold;">CULTURE & LIFESTYLE</P>
                                 </div>
                                 <div class="box" id="left-bottom-box">
-                                    <p>Chinese dialect</p>
+                                    <p style="font-size: 1.4vh; line-height: 1.6vh;">Chinese dialect</p>
                                 </div>
                             </div>
 
@@ -79,11 +79,11 @@
                                         background-size: cover;
                                         background-position: center;
                                         text-shadow:0 0 10px rgb(50, 50, 50);">
-                                    <p style="font-size: 3vh; font-weight:bold;">MANDARIN</p>
-                                    <P style="font-size: 1.5vh; font-weight:bold;">CULTURE & LIFESTYLE</P>
+                                    <p style="font-size: 2.5vh; font-weight:bold;">MANDARIN</p>
+                                    <P style="font-size: 1.4vh; font-weight:bold;">CULTURE & LIFESTYLE</P>
                                 </div>
                                 <div class="box" id="left-bottom-box">
-                                    <p>Chinese official Language</p>
+                                    <p style="font-size: 1.4vh; line-height: 1.6vh;">Chinese official Language</p>
                                 </div>
                             </div>
 
