--- a/zho/tool/navigation_zho.html
+++ b/zho/tool/navigation_zho.html
@@ -12,7 +12,7 @@
 
         <nav id="navbar_Responsive" 
             style="
-                width: inherit; height: 2.5em;
+                width: inherit; height: 50px;
                 background-color: rgb(0, 0, 0);
                 align-items: center;
                 float: left; display: flex; 
