--- a/knowledgebase/human_language.html
+++ b/knowledgebase/human_language.html
@@ -38,7 +38,7 @@
                                     <P style="font-size: 1.4vh; font-weight:bold;">CULTURE & LIFESTYLE</P>
                                 </div>
                                 <div class="box" id="left-bottom-box">
-                                    <p style="font-size: 1.4vh; line-height: 1.6vh;">Chinese dialect</p>
+                                    <p style="font-size: 1.4vh; line-height: 1.6vh;">Chinese Dialect</p>
                                 </div>
                             </div>
 
@@ -83,7 +83,7 @@
                                     <P style="font-size: 1.4vh; font-weight:bold;">CULTURE & LIFESTYLE</P>
                                 </div>
                                 <div class="box" id="left-bottom-box">
-                                    <p style="font-size: 1.4vh; line-height: 1.6vh;">Chinese official Language</p>
+                                    <p style="font-size: 1.4vh; line-height: 1.6vh;">Chinese Official Language</p>
                                 </div>
                             </div>
 
